#61 - Only summary result returned if less (<) than x sites answered (#64)
- add configurable threshold for amount of sites that need to have replied in order for a user to retrieve a query result including different sites (still obfuscated)
- variable app.privacy.threshold.minRespondingSites and env variable PRIVACY_THRESHOLD_SITES
- restructure /query/{id}/result endpoints as follows
- GET ../query/{id} no longer contains the result (this was only used when loading saved queries which needs a revamp anyways)
- GET ../query/{id}/summary-result only contains the summary
- GET ../query/{id}/detailed-obfuscated-result contains the result, broken down on sites (with obfuscated names), as long as more than the threshold have answered
- GET ../query/{id}/detailed-result always contains the full result with clear site names, no matter the threshold (is only available to admins)
- remove the result from the Query class in the query.api package
---------

Co-authored-by: Alexander Kiel <alexanderkiel@gmx.net>